@@ -2180,8 +2180,10 @@ class Parser
 			# Add a new element to the templace recursion path
 			$this->mTemplatePath[$part1] = 1;
 
-			$text = $this->strip( $text, $this->mStripState );
-			$text = $this->removeHTMLtags( $text );
+			if( $this->mOutputType == OT_HTML ) {
+				$text = $this->strip( $text, $this->mStripState );
+				$text = $this->removeHTMLtags( $text );
+			}
 			$text = $this->replaceVariables( $text, $assocArgs );
 
 			# Resume the link cache and register the inclusion as a link
